--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "instagram_mqtt": "^1.2.2",
+    "instagram-private-api": "^1.45.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "node-nlp": "^4.27.0",
