--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/imap": "^0.8.40",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.19",
     "@types/node-telegram-bot-api": "^0.64.2",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -30,12 +32,15 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "imap": "^0.8.19",
     "instagram_mqtt": "^1.2.2",
     "instagram-private-api": "^1.45.3",
     "jsonwebtoken": "^9.0.2",
+    "mail-listener2": "^0.3.1",
     "mongoose": "^8.1.2",
     "node-nlp": "^4.27.0",
     "node-telegram-bot-api": "^0.64.0",
+    "nodemailer": "^6.9.9",
     "socket.io": "^4.7.4"
   }
 }
