--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/schema": "^10.0.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -32,9 +34,11 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.8.1",
     "imap": "^0.8.19",
-    "instagram_mqtt": "^1.2.2",
     "instagram-private-api": "^1.45.3",
+    "instagram_mqtt": "^1.2.2",
     "jsonwebtoken": "^9.0.2",
     "mail-listener2": "^0.3.1",
     "mongoose": "^8.1.2",
