--- a/package.json
+++ b/package.json
@@ -40,10 +40,15 @@
     "instagram-private-api": "^1.45.3",
     "jsonwebtoken": "^9.0.2",
     "mail-listener2": "^0.3.1",
+    "mail-listener2-updated": "^0.3.3",
+    "mail-listener5": "^2.1.2",
     "mongoose": "^8.1.2",
     "node-nlp": "^4.27.0",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.9",
-    "socket.io": "^4.7.4"
+    "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.7.4",
+    "whatsapp-web.js": "^1.23.0",
+    "wwebjs-mongo": "^1.1.0"
   }
 }
