--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-nlp": "^4.27.0",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.9",
+    "openai": "^4.28.0",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.4",
     "whatsapp-web.js": "^1.23.0",
