--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/imap": "^0.8.40",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.19",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/nodemailer": "^6.4.14",
+    "@types/redis": "^4.0.11",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -29,12 +31,15 @@
     "@graphql-tools/schema": "^10.0.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "graphql": "^16.8.1",
     "imap": "^0.8.19",
     "instagram-private-api": "^1.45.3",
@@ -45,6 +50,7 @@
     "node-nlp": "^4.27.0",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.9",
+    "redis": "^4.6.13",
     "socket.io": "^4.7.4"
   }
 }
