--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "supplyfy-chatbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "build": "tsc"
-  },
-  "keywords": [],
+  "main": "src/index.ts",
   "author": "Thomas Gouvea <thomasafg@hotmail.com>",
   "license": "MIT",
+  "private": true,
+  "scripts": {
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
@@ -17,18 +18,18 @@
     "@types/express-session": "^1.18.0",
     "@types/imap": "^0.8.40",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/kafkajs": "^1.9.0",
     "@types/node": "^20.11.19",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/nodemailer": "^6.4.14",
-    "@types/redis": "^4.0.11",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@graphql-tools/load-files": "^7.0.0",
-    "@graphql-tools/schema": "^10.0.2",
+    "@graphql-tools/merge": "^9.0.3",
+    "@graphql-tools/schema": "^10.0.3",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
@@ -45,12 +46,14 @@
     "instagram-private-api": "^1.45.3",
     "instagram_mqtt": "^1.2.2",
     "jsonwebtoken": "^9.0.2",
-    "mail-listener2": "^0.3.1",
     "mongoose": "^8.1.2",
     "node-nlp": "^4.27.0",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.9",
     "redis": "^4.6.13",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "whatsapp-web.js": "^1.23.0",
+    "wwebjs-mongo": "^1.1.0",
+    "x-hub-signature": "^2.1.2"
   }
 }
