--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.11.19",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/nodemailer": "^6.4.14",
+    "@types/redis": "^4.0.11",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -38,24 +39,23 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "graphql": "^16.8.1",
     "imap": "^0.8.19",
-    "instagram_mqtt": "^1.2.2",
     "instagram-private-api": "^1.45.3",
+    "instagram_mqtt": "^1.2.2",
     "jsonwebtoken": "^9.0.2",
     "mail-listener5": "^2.1.2",
     "mongoose": "^8.1.2",
     "node-nlp": "^4.27.0",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.9",
-    "redis": "^4.6.13",
     "qrcode-terminal": "^0.12.0",
     "socket.io-client": "^4.7.4",
     "whatsapp-web.js": "^1.23.0",
     "wwebjs-mongo": "^1.1.0",
-    "x-hub-signature": "^2.1.2",
-    "whatsapp-web.js": "^1.23.0",
-    "wwebjs-mongo": "^1.1.0"
+    "x-hub-signature": "^2.1.2"
   }
 }
