--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "supplyfy-chatbot",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "prod": "node -r ts-node/register/transpile-only build/index.js"
   },
   "keywords": [],
   "author": "Thomas Gouvea <thomasafg@hotmail.com>",
@@ -23,7 +24,6 @@
     "@types/nodemailer": "^6.4.14",
     "@types/redis": "^4.0.11",
     "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
@@ -47,13 +47,16 @@
     "instagram-private-api": "^1.45.3",
     "instagram_mqtt": "^1.2.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mail-listener5": "^2.1.2",
     "mongoose": "^8.1.2",
     "node-nlp": "^4.27.0",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.9",
     "qrcode-terminal": "^0.12.0",
+    "redis": "^4.6.13",
     "socket.io-client": "^4.7.4",
+    "ts-node": "^10.9.2",
     "whatsapp-web.js": "^1.23.0",
     "wwebjs-mongo": "^1.1.0",
     "x-hub-signature": "^2.1.2"
