--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es2016", 
     "module": "commonjs",
     "rootDir": "src",
-    "moduleResolution": "node10", 
+    "moduleResolution": "node", 
     "typeRoots": ["src/types/**/*", "node_modules/@types/**/*"],
     "resolveJsonModule": true,
     "allowJs": true,
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitAny": true, 
+    "noImplicitAny": false, 
     "skipLibCheck": true
   }
 }
