--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules ./src/index.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts",
     "build": "tsc",
     "prod": "node -r ts-node/register/transpile-only build/index.js"
   },
