--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "prod": "node -r ts-node/register/transpile-only build/index.js"
   },
   "keywords": [],
-  "author": "Thomas Gouvea <thomasafg@hotmail.com>",
-  "license": "MIT",
+  "author": "Renan Georgio <regeo9g@hotmail.com>",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
@@ -18,11 +17,9 @@
     "@types/express-session": "^1.18.0",
     "@types/imap": "^0.8.40",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/kafkajs": "^1.9.0",
     "@types/node": "^20.11.19",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/nodemailer": "^6.4.14",
-    "@types/redis": "^4.0.11",
     "nodemon": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
@@ -32,17 +29,15 @@
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-tools/schema": "^10.0.3",
     "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-graphql": "^0.12.0",
+    "express-graphql": "0.12.0",
     "express-session": "^1.18.0",
-    "express-validator": "^7.0.1",
-    "graphql": "^16.8.1",
+    "graphql": "^15.3.0",
     "imap": "^0.8.19",
     "instagram-private-api": "1.45.1",
     "instagram_mqtt": "^1.2.2",
