--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nodemailer": "^6.9.9",
     "qrcode-terminal": "^0.12.0",
     "redis": "^4.6.13",
+    "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.4",
     "ts-node": "^10.9.2",
     "whatsapp-web.js": "^1.23.0",
