--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "keywords": [],
   "author": "Renan Georgio <regeo9g@hotmail.com>",
   "devDependencies": {
+    "@bull-board/express": "^5.16.0",
+    "@types/bull": "^4.10.0",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -20,6 +22,7 @@
     "@types/node": "^20.11.19",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/nodemailer": "^6.4.14",
+    "bull": "^4.12.2",
     "nodemon": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
