--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,14 +13,9 @@ services:
     volumes:
       - "/src/core/configs/data:/root/redis"
       - "/src/core/configs/redis.conf:/usr/local/etc/redis/redis.conf"
-    networks:
-      - mynetwork
 
   supplyfy-chatbot:
-    build: 
-      context: .
-      args:
-        ENV: ${ENV}
+    image: ignaichatbotassets.azurecr.io/supplyfy-chatbot:latest
     hostname: supplyfy-chatbot
     container_name: supplyfy-chatbot
     restart: always
@@ -28,13 +23,3 @@ services:
       - redis
     ports:
      - "8000:8000"
-    env_file:
-      - .env
-    networks:
-      - mynetwork
-
-networks:
-  mynetwork:
-    driver: bridge
-    external:
-      name: kafka-chatbot_default
