--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,14 @@ version: "3.9"
 
 services:
   redis:
-    image: redis:7.2.4-alpine3.19
+    image: ignaichatbotassets.azurecr.io/redis:latest
     hostname: redis
     container_name: redis
     restart: always
+    environment:
+      WEBSITES_ENABLE_APP_SERVICE_STORAGE: TRUE
     ports:
       - "6379:6379"
-    command: >
-      --include /usr/local/etc/redis/redis.conf
-    volumes:
-      - "/src/core/configs/data:/root/redis"
-      - "/src/core/configs/redis.conf:/usr/local/etc/redis/redis.conf"
 
   supplyfy-chatbot:
     image: ignaichatbotassets.azurecr.io/supplyfy-chatbot:latest
