--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./src/index.ts",
-    "build": "tsc",
+    "build": "tsc -p .",
     "prod": "node -r ts-node/register/transpile-only build/index.js"
   },
   "keywords": [],
