--- a/.github/workflows/docker-builder.yml
+++ b/.github/workflows/docker-builder.yml
@@ -66,4 +66,9 @@ jobs:
           docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
 
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'supplyfy-chatbot'
+          configuration-file: 'docker-compose.yml'
 
