--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.0",
+    "redis": "^4.6.13",
     "ts-node": "^10.9.2",
     "x-hub-signature": "^2.1.2"
   }
