--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       WEBSITES_ENABLE_APP_SERVICE_STORAGE: TRUE
     ports:
       - "6379:6379"
-
+    networks:
+      - redis_network
+      
   supplyfy-chatbot:
     image: ignaichatbotassets.azurecr.io/supplyfy-chatbot:latest
     hostname: supplyfy-chatbot
@@ -40,3 +42,8 @@ services:
       SFDC_PASSWORD: ${{ secrets.SFDC_PASSWORD }}
     ports:
      - "80:8000"
+    networks:
+      - redis_network
+
+networks:
+    redis_network:
