--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,2 +1,3 @@
 FROM redis:7.2.4-alpine3.19
 COPY ./configs/redis.conf /usr/local/etc/redis/redis.conf
+CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
