--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.18.0",
+    "kafkajs": "^2.2.4",
     "redis": "^4.6.13",
     "ts-node": "^10.9.2",
     "x-hub-signature": "^2.1.2"
