--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,17 @@ version: "3.9"
 
 services:
   redis:
-    build: ./redis
+    image: ignaichatbotassets.azurecr.io/redis:latest
     hostname: redis
     container_name: redis
     restart: always
-    privileged: true
     environment:
       WEBSITES_ENABLE_APP_SERVICE_STORAGE: TRUE
     networks:
       - redis_network
       
   supplyfy-chatbot:
-    build: .
+    image: ignaichatbotassets.azurecr.io/supplyfy-chatbot:latest
     hostname: supplyfy-chatbot
     container_name: supplyfy-chatbot
     restart: always
