--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     hostname: redis
     container_name: redis
     restart: always
+    ports:
+      - "6379:6379"
     environment:
       WEBSITES_ENABLE_APP_SERVICE_STORAGE: TRUE
       
