--- a/redis/configs/redis.conf
+++ b/redis/configs/redis.conf
@@ -85,8 +85,8 @@
 # You will also need to set a password unless you explicitly disable protected
 # mode.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-bind * -::*
-
+# bind * -::*
+bind 127.0.0.1
 # By default, outgoing connections (from replica to master, from Sentinel to
 # instances, cluster bus, etc.) are not bound to a specific local address. In
 # most cases, this means the operating system will handle that based on routing
@@ -1390,7 +1390,7 @@ disable-thp yes
 #
 # Please check https://redis.io/topics/persistence for more information.
 
-appendonly no
+appendonly yes
 
 # The base name of the append only file.
 #
