--- a/redis/configs/redis.conf
+++ b/redis/configs/redis.conf
@@ -86,7 +86,8 @@
 # mode.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # bind * -::*
-bind 127.0.0.1
+bind 127.0.0.1 ::1
+
 # By default, outgoing connections (from replica to master, from Sentinel to
 # instances, cluster bus, etc.) are not bound to a specific local address. In
 # most cases, this means the operating system will handle that based on routing
@@ -136,7 +137,7 @@ protected-mode no
 
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
-port 6379
+# port 6379
 
 # TCP listen() backlog.
 #
@@ -192,7 +193,7 @@ tcp-keepalive 300
 # directive can be used to define TLS-listening ports. To enable TLS on the
 # default port, use:
 #
-# port 0
+port 6379
 # tls-port 6379
 
 # Configure a X.509 certificate and private key to use for authenticating the
