--- a/.github/workflows/docker-builder.yml
+++ b/.github/workflows/docker-builder.yml
@@ -55,12 +55,12 @@ jobs:
           docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest --build-arg ARG_SESSION_TOKEN="$SESSION_TOKEN" --build-arg ARG_NODE_ENV="$NODE_ENV" --build-arg ARG_USER_CONTROLL="$USER_CONTROLL" --build-arg ARG_FACEBOOK_METADATA="$FACEBOOK_METADATA" --build-arg ARG_APP_SECRET="$APP_SECRET" --build-arg ARG_SERVER_URL="$SERVER_URL" --build-arg ARG_ACCESS_TOKEN="$ACCESS_TOKEN" --build-arg ARG_REDIS_PASSWORD="$REDIS_PASSWORD" --build-arg ARG_REDIS_HOST="$REDIS_HOST" --build-arg ARG_REDIS_PORT="$REDIS_PORT" --build-arg ARG_KAFKA_BROKERS="$KAFKA_BROKERS" --build-arg ARG_MONGO_URL="$MONGO_URL" --build-arg ARG_VERSION="$VERSION" --build-arg ARG_PHONE_NUMBER_ID="$PHONE_NUMBER_ID" --build-arg ARG_WEBHOOK_VERIFICATION_TOKEN="$WEBHOOK_VERIFICATION_TOKEN" --build-arg ARG_SFDC_CONSUMER_KEY="$SFDC_CONSUMER_KEY" --build-arg ARG_SFDC_CONSUMER_SECRET="$SFDC_CONSUMER_SECRET" --build-arg ARG_SFDC_USERNAME="$SFDC_USERNAME" --build-arg ARG_SFDC_PASSWORD="$SFDC_PASSWORD"
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest
 
-      - name: 'Build and push redis'
-        uses: azure/docker-login@v1
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
         with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          app-name: 'supplyfy-chatbot'
+          images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest
+          restart: true
 
       - run: |
           docker build ./redis/ -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
@@ -69,6 +69,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'supplyfy-chatbot'
-          configuration-file: 'docker-compose.yml'
-
+          app-name: 'redis-chatbot'
+          images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
+          restart: true
