--- a/redis/configs/redis.conf
+++ b/redis/configs/redis.conf
@@ -192,8 +192,8 @@ tcp-keepalive 300
 # directive can be used to define TLS-listening ports. To enable TLS on the
 # default port, use:
 #
-port 0
-tls-port 6379
+port 6379
+# tls-port 6379
 
 # Configure a X.509 certificate and private key to use for authenticating the
 # server to connected clients, masters or cluster peers.  These files should be
