--- a/.github/workflows/docker-builder.yml
+++ b/.github/workflows/docker-builder.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: 'Set up Docker Buildx'
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
       - name: 'Login via Azure CLI'
@@ -24,7 +24,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: 'Build and push supplyfy-chatbot'
+      - name: 'Build and push'
         uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
@@ -43,6 +43,8 @@ jobs:
           REDIS_HOST: ${{ secrets.REDIS_HOST }}
           REDIS_PORT: ${{ secrets.REDIS_PORT }}
           KAFKA_BROKERS: ${{ secrets.KAFKA_BROKERS }}
+          KAFKA_USERNAME: ${{ secrets.KAFKA_USERNAME }}
+          KAFKA_PASSWORD: ${{ secrets.KAFKA_PASSWORD }}
           MONGO_URL: ${{ secrets.MONGO_URL }}
           VERSION: ${{ secrets.VERSION }}
           PHONE_NUMBER_ID: ${{ secrets.PHONE_NUMBER_ID }}
@@ -52,23 +54,12 @@ jobs:
           SFDC_USERNAME: ${{ secrets.SFDC_USERNAME }}
           SFDC_PASSWORD: ${{ secrets.SFDC_PASSWORD }}
         run: |
-          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest --build-arg ARG_SESSION_TOKEN="$SESSION_TOKEN" --build-arg ARG_NODE_ENV="$NODE_ENV" --build-arg ARG_USER_CONTROLL="$USER_CONTROLL" --build-arg ARG_FACEBOOK_METADATA="$FACEBOOK_METADATA" --build-arg ARG_APP_SECRET="$APP_SECRET" --build-arg ARG_SERVER_URL="$SERVER_URL" --build-arg ARG_ACCESS_TOKEN="$ACCESS_TOKEN" --build-arg ARG_REDIS_PASSWORD="$REDIS_PASSWORD" --build-arg ARG_REDIS_HOST="$REDIS_HOST" --build-arg ARG_REDIS_PORT="$REDIS_PORT" --build-arg ARG_KAFKA_BROKERS="$KAFKA_BROKERS" --build-arg ARG_MONGO_URL="$MONGO_URL" --build-arg ARG_VERSION="$VERSION" --build-arg ARG_PHONE_NUMBER_ID="$PHONE_NUMBER_ID" --build-arg ARG_WEBHOOK_VERIFICATION_TOKEN="$WEBHOOK_VERIFICATION_TOKEN" --build-arg ARG_SFDC_CONSUMER_KEY="$SFDC_CONSUMER_KEY" --build-arg ARG_SFDC_CONSUMER_SECRET="$SFDC_CONSUMER_SECRET" --build-arg ARG_SFDC_USERNAME="$SFDC_USERNAME" --build-arg ARG_SFDC_PASSWORD="$SFDC_PASSWORD"
+          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest --build-arg ARG_SESSION_TOKEN="$SESSION_TOKEN" --build-arg ARG_NODE_ENV="$NODE_ENV" --build-arg ARG_USER_CONTROLL="$USER_CONTROLL" --build-arg ARG_FACEBOOK_METADATA="$FACEBOOK_METADATA" --build-arg ARG_APP_SECRET="$APP_SECRET" --build-arg ARG_SERVER_URL="$SERVER_URL" --build-arg ARG_ACCESS_TOKEN="$ACCESS_TOKEN" --build-arg ARG_REDIS_PASSWORD="$REDIS_PASSWORD" --build-arg ARG_REDIS_HOST="$REDIS_HOST" --build-arg ARG_REDIS_PORT="$REDIS_PORT" --build-arg ARG_KAFKA_BROKERS="$KAFKA_BROKERS" --build-arg ARG_KAFKA_USERNAME="$KAFKA_USERNAME" --build-arg ARG_KAFKA_PASSWORD="$KAFKA_PASSWORD" --build-arg ARG_MONGO_URL="$MONGO_URL" --build-arg ARG_VERSION="$VERSION" --build-arg ARG_PHONE_NUMBER_ID="$PHONE_NUMBER_ID" --build-arg ARG_WEBHOOK_VERIFICATION_TOKEN="$WEBHOOK_VERIFICATION_TOKEN" --build-arg ARG_SFDC_CONSUMER_KEY="$SFDC_CONSUMER_KEY" --build-arg ARG_SFDC_CONSUMER_SECRET="$SFDC_CONSUMER_SECRET" --build-arg ARG_SFDC_USERNAME="$SFDC_USERNAME" --build-arg ARG_SFDC_PASSWORD="$SFDC_PASSWORD"
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest
 
-      - name: 'Build and push redis'
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-
-      - run: |
-          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
-
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'supplyfy-chatbot'
-          configuration-file: 'docker-compose.yml'
-
+          images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest
+          restart: true
