--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "mongoose": "^8.4.0",
     "ts-node": "^10.9.2",
     "x-hub-signature": "^2.1.2"
   }
