--- a/.github/workflows/docker-builder.yml
+++ b/.github/workflows/docker-builder.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: 'Set up Docker Buildx'
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
       - name: 'Login via Azure CLI'
@@ -24,7 +24,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: 'Build and push supplyfy-chatbot'
+      - name: 'Build and push'
         uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
@@ -34,23 +34,12 @@ jobs:
       - env:
           MONGO_URL: ${{ secrets.MONGO_URL }}
         run: |
-          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest  --build-arg ARG_MONGO_URL="$MONGO_URL"
+          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest --build-arg ARG_MONGO_URL="$MONGO_URL"
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest
 
-      - name: 'Build and push redis'
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-
-      - run: |
-          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/redis:latest
-
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'supplyfy-chatbot'
-          configuration-file: 'docker-compose.yml'
-
+          images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/supplyfy-chatbot:latest
+          restart: true
