preparação do build

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@graphql-tools/load-files": "^7.0.0",
     "@graphql-tools/merge": "^9.0.3",
     "@graphql-tools/schema": "^10.0.3",
+    "@nlpjs/nlp": "^4.27.0",
     "axios": "^1.6.7",
     "botbuilder": "^4.22.3",
+    "botbuilder-dialogs": "^4.22.3",
     "botframework-directlinejs": "^0.15.5",
     "bull": "^4.12.2",
     "connect-redis": "^7.1.1",
