--- a/package.json
+++ b/package.json
@@ -65,5 +65,6 @@
     "wwebjs-mongo": "^1.1.0",
     "x-hub-signature": "^2.1.2",
     "xhr2": "^0.2.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
